[package]
name = "aoc"
version = "0.1.0"
authors = ["Philipp Jung <philipp.jung@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "", features = ["release_max_level_info"]}
env_logger = ""
test-env-log = ""
num = ""
itertools = ""
regex = ""
array_tool = ""
